--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -1,4 +1,61 @@
+body {
+    background: url(../images/trees.jpg) no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;  
+}
+body::after {
+    background: url(../images/trees.jpg);
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    position: absolute;
+    z-index: -1;   
+  }
+/*Navbar*/
+.nav-item {
+    font-family: 'Quicksand', sans-serif;
+}
+.wrapper {
+    width: 960px;
+    height: 600px;
+    padding: 10px;
+    margin: 20px auto 0px auto;
+    background-color: white;
+    opacity: .7;
+}
+/*About page*/
+.container {
+    margin: 10px 0px 0px 10px;;
+}
+.page-header {
+    font-family: 'Quicksand', sans-serif;
+}
+#biopic {
+    z-index: 2000;
+    opacity: 100%;
+}
+.col-5 {
+    font-family: 'Shadows Into Light Two', cursive;
+
+}
+.card-title {
+    font-family: 'Quicksand', sans-serif;
+}
+.card-text {
+    font-family: 'Shadows Into Light Two', cursive;
+}
+.card-link {
+    font-family: 'Shadows Into Light Two', cursive;
+}
+
+
 /*Portfolio Page*/
+.portfolio {
+    font-family: 'Shadows Into Light Two', cursive;
+}
 
 /*First*/
 .first {
@@ -8,16 +65,20 @@
 }
 .first img {
     width: 100%;
+    margin-bottom: 10px;
+    opacity: 100%;
 }
 .wordgames {
     position: absolute;
-    top: 60%;
-    background-color: black;
-    color: white;
+    top: 70%;
+    background-color: white;
+    color: rgb(14, 139, 133);
     text-align: center;
+    font-family: 'Shadows Into Light Two', cursive;
     font-size: 24px;
     padding: 5px;   
     width: 100%;
+    opacity: 100%;
 }
 /*Second*/
 .second {
@@ -27,13 +88,15 @@
 }
 .second img {
     width: 100%;
+    margin-bottom: 10px;
 }
 .rpg {
     position: absolute;
-    top: 60%;
-    background-color: black;
-    color: white;
+    top: 70%;
+    background-color: white;
+    color: rgb(14, 139, 133);
     text-align: center;
+    font-family: 'Shadows Into Light Two', cursive;
     font-size: 24px;
     padding: 5px;   
     width: 100%;
@@ -46,13 +109,15 @@
 }
 .third img {
     width: 100%;
+    margin-bottom: 10px;
 }
 .trivia {
     position: absolute;
-    top: 60%;
-    background-color: black;
-    color: white;
+    top: 70%;
+    background-color: white;
+    color: rgb(14, 139, 133);
     text-align: center;
+    font-family: 'Shadows Into Light Two', cursive;
     font-size: 24px;
     padding: 5px;   
     width: 100%;
@@ -65,13 +130,15 @@
 }
 .fourth img {
     width: 100%;
+    margin-bottom: 10px;
 }
 .rutgers {
     position: absolute;
-    top: 60%;
-    background-color: black;
-    color: white;
+    top: 70%;
+    background-color: white;
+    color: rgb(14, 139, 133);
     text-align: center;
+    font-family: 'Shadows Into Light Two', cursive;
     font-size: 24px;
     padding: 5px;   
     width: 100%;
@@ -84,14 +151,30 @@
 }
 .fifth img {
     width: 100%;
+    margin-bottom: 10px;
 }
 .rock {
     position: absolute;
-    top: 60%;
-    background-color: black;
-    color: white;
+    top: 70%;
+    background-color: white;
+    color: rgb(14, 139, 133);
     text-align: center;
     font-size: 24px;
+    font-family: 'Shadows Into Light Two', cursive;
     padding: 5px;   
     width: 100%;
+}
+
+/*Contact Page*/
+.col-3 {
+    font-family: 'Quicksand', sans-serif;
+}
+.col-sm-10 {
+    font-family: 'Quicksand', sans-serif;
+}
+.form-control {
+    font-family: 'Shadows Into Light Two', cursive;
+}
+.form {
+    margin: 60px 30px 0px 30px;
 }
