--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -18,13 +18,13 @@ body::after {
 .nav-item {
     font-family: 'Quicksand', sans-serif;
 }
-.wrapper {
+#wrapper {
     width: 960px;
     height: 600px;
     padding: 10px;
     margin: 20px auto 0px auto;
-    background-color: white;
-    opacity: .7;
+    background-color: rgba(255, 255, 255, .7);
+
 }
 /*About page*/
 .container {
@@ -36,6 +36,7 @@ body::after {
 #biopic {
     z-index: 2000;
     opacity: 100%;
+    margin-right: 20px;
 }
 .col-5 {
     font-family: 'Shadows Into Light Two', cursive;
@@ -166,14 +167,15 @@ body::after {
 }
 
 /*Contact Page*/
+
 .col-3 {
-    font-family: 'Quicksand', sans-serif;
+    font-family: 'Shadows Into Light Two', cursive;
 }
 .col-sm-10 {
     font-family: 'Quicksand', sans-serif;
 }
 .form-control {
-    font-family: 'Shadows Into Light Two', cursive;
+    font-family: 'Quicksand', sans-serif;
 }
 .form {
     margin: 60px 30px 0px 30px;
