--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -4,7 +4,7 @@ body {
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;  
-}
+}ƒ
 body::after {
     background: url(../images/trees.jpg);
     top: 0;
@@ -36,11 +36,16 @@ body::after {
 #biopic {
     z-index: 2000;
     opacity: 100%;
-    margin-right: 20px;
+    margin-top: 20px;
+    box-shadow: 5px 5px 2px grey;
+}
+.p {
+    width: 450px;
+    margin-left: 7px;
+    text-align: justify;
 }
 .col-5 {
     font-family: 'Shadows Into Light Two', cursive;
-
 }
 .card-title {
     font-family: 'Quicksand', sans-serif;
@@ -63,15 +68,14 @@ body::after {
     position: relative;
     width: 90%;
     margin: 0 auto;
+    box-shadow: 5px 5px 2px grey;
 }
 .first img {
     width: 100%;
-    margin-bottom: 10px;
-    opacity: 100%;
 }
 .wordgames {
     position: absolute;
-    top: 70%;
+    top: 60%;
     background-color: white;
     color: rgb(14, 139, 133);
     text-align: center;
@@ -86,14 +90,15 @@ body::after {
     position: relative;
     width: 90%;
     margin: 0 auto;
+    box-shadow: 5px 5px 2px grey;
+
 }
 .second img {
     width: 100%;
-    margin-bottom: 10px;
 }
 .rpg {
     position: absolute;
-    top: 70%;
+    top: 60%;
     background-color: white;
     color: rgb(14, 139, 133);
     text-align: center;
@@ -107,14 +112,15 @@ body::after {
     position: relative;
     width: 90%;
     margin: 0 auto;
+    box-shadow: 5px 5px 2px grey;
+
 }
 .third img {
     width: 100%;
-    margin-bottom: 10px;
 }
 .trivia {
     position: absolute;
-    top: 70%;
+    top: 60%;
     background-color: white;
     color: rgb(14, 139, 133);
     text-align: center;
@@ -128,14 +134,15 @@ body::after {
     position: relative;
     width: 90%;
     margin: 0 auto;
+    box-shadow: 5px 5px 2px grey;
+
 }
 .fourth img {
     width: 100%;
-    margin-bottom: 10px;
 }
 .rutgers {
     position: absolute;
-    top: 70%;
+    top: 60%;
     background-color: white;
     color: rgb(14, 139, 133);
     text-align: center;
@@ -149,14 +156,15 @@ body::after {
     position: relative;
     width: 90%;
     margin: 0 auto;
+    box-shadow: 5px 5px 2px grey;
+
 }
 .fifth img {
     width: 100%;
-    margin-bottom: 10px;
 }
 .rock {
     position: absolute;
-    top: 70%;
+    top: 60%;
     background-color: white;
     color: rgb(14, 139, 133);
     text-align: center;
@@ -168,7 +176,7 @@ body::after {
 
 /*Contact Page*/
 
-.col-3 {
+.col-12 {
     font-family: 'Shadows Into Light Two', cursive;
 }
 .col-sm-10 {
@@ -179,4 +187,23 @@ body::after {
 }
 .form {
     margin: 60px 30px 0px 30px;
+}
+
+
+/*Media Query*/
+@media screen and (max-width: 959px) {
+    #wrapper {
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 640px) {
+    #wrapper {
+        width: 100%;
+    }
+}
+@media screen and (max-width: 320px) {
+    #wrapper {
+        width: 320px;
+    }
 }
