--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -28,7 +28,8 @@ body::after {
 }
 /*About page*/
 .container {
-    margin: 10px 0px 0px 10px;;
+    margin: 10px 0px 0px 10px;
+    ;
 }
 .page-header {
     font-family: 'Quicksand', sans-serif;
@@ -186,13 +187,27 @@ body::after {
     font-family: 'Quicksand', sans-serif;
 }
 .form {
-    margin: 60px 30px 0px 30px;
+    margin: 0 auto;
 }
+
+/*Footer*/
+.footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: whitesmoke;
+    color: gray;
+    text-align: center;
+ }
 
 
 /*Media Query*/
 @media screen and (max-width: 959px) {
     #wrapper {
+        width: 100%;
+    }
+    .wordgames {
         width: 100%;
     }
 }
@@ -201,9 +216,15 @@ body::after {
     #wrapper {
         width: 100%;
     }
+    .wordgames {
+        width: 100%;
+    }
 }
 @media screen and (max-width: 320px) {
     #wrapper {
         width: 320px;
+    }
+    .wordgames {
+        width: 100%;
     }
 }
